--- a/SaharBadakhsh.html
+++ b/SaharBadakhsh.html
@@ -57,7 +57,7 @@
         <div class="hero-content display-table">
             <div class="table-cell">
                 <div class="container">
-                    <h2 class="hero-title mb-4"> My Portfolio</h2>
+                    <h2 class="hero-title mb-4">Information About Student</h2>
                     <ol class="breadcrumb d-flex justify-content-center">
                         <li class="breadcrumb-item">
                             <a href="#">information</a>
@@ -82,16 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/netflix_hover.PNG" alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/netflix_hover_two.PNG " alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="">
                                 </div>
 
-                                <div class="
-                    swiper-slide">
-                                    <img src="assets/img/netflix_hover.PNG" alt="">
+                                <div class="swiper-slide">
+                                    <img src="assets/img/Shaer.jpg" alt="">
                                 </div>
 
 
@@ -102,14 +101,22 @@
 
                     <div class="col-lg-4">
                         <div class="portfolio-info">
-                            <h3> Project information</h3>
+                            <h3> Student information</h3>
                             <ul>
-                                <li><strong>Project Name</strong>: NETFLIX.com </li>
-                                <li><strong> Github Link</strong>: <a href="https://github.com/MahsumaRezai/Netflix_singin">
-                                        https://github.com/MahsumaRezai</a></li>
-                                <li><strong>Project Demo </strong>: <a href=" https://clever-croquembouche-877fc2.netlify.app/">
-                                        https://clever-croquembouche-877fc2.netlify.app/</a></li>
-
+                                <li><strong> Name</strong>:Sahar Badakhsh </li>
+                                <li><strong>Father Name</strong>: Hafizullah
+                                </li>
+                                <li><strong>Email Adress</strong>: <a href="saharbadaakhsh@gmail.com">
+                                        saharbadaakhsh@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: +93798423283 </li>
+                                <li><strong>Home Adress</strong>: Herat, 1st
+                                    District, Semetra street </li>
+                                <li><strong> Filed of Study</strong>: Art </li>
+                                <li><strong> Skill</strong>: Painting (oil color, acrylic, water color ,wood and clay
+                                    carving) </li>
+                                <li><strong> Brand Name</strong>: Artalia</li>
+                                <li><strong> Name Of Product</strong>: produced in your brand:Art/decoration tools and
+                                    panels, making logos and graphic designs</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -121,7 +128,10 @@
 
             </div>
         </section><!-- End Portfolio Details Section -->
+        <!-- section for infromation about students-->
+        <div>
 
+        </div>
     </main>
     <!-- End  section main -->
 
@@ -131,9 +141,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Masoumeh Rezai</p>
+                        <p class="copyright">Sahar Badakhsh</p>
                         <div class="credits">
-                            <a href="https://github.com/MahsumaRezai">My Github</a>
+                            <a href="saharbadaakhsh@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
