--- a/SaharFajr.html
+++ b/SaharFajr.html
@@ -57,7 +57,7 @@
         <div class="hero-content display-table">
             <div class="table-cell">
                 <div class="container">
-                    <h2 class="hero-title mb-4"> My Portfolio</h2>
+                    <h2 class="hero-title mb-4">Information About Student</h2>
                     <ol class="breadcrumb d-flex justify-content-center">
                         <li class="breadcrumb-item">
                             <a href="#">information</a>
@@ -82,16 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/dribble_hover.PNG" alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/dribble_hover_two.PNG " alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="">
                                 </div>
 
-                                <div class="
-                    swiper-slide">
-                                    <img src="assets/img/dribble_hover_three.PNG" alt="">
+                                <div class="swiper-slide">
+                                    <img src="assets/img/Shaer.jpg" alt="">
                                 </div>
 
 
@@ -102,14 +101,20 @@
 
                     <div class="col-lg-4">
                         <div class="portfolio-info">
-                            <h3> Project information</h3>
+                            <h3> Student information</h3>
                             <ul>
-                                <li><strong>Project Name</strong>: Login pages </li>
-                                <li><strong> Github Link</strong>: <a href="https://github.com/MahsumaRezai/login_pages_collection">
-                                        https://github.com/MahsumaRezai</a></li>
-                                <li><strong>Project Demo </strong>: <a href="https://stellular-churros-602c03.netlify.app/">
-                                        https://stellular-churros-602c03.netlify.app/</a></li>
-
+                                <li><strong> Name</strong>:Sahar Fajr </li>
+                                <li><strong>Father Name</strong>: Fazlulhaq
+                                </li>
+                                <li><strong>Email Adress</strong>: <a href="sr.fajr@gmail.com">
+                                        sr.fajr@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: +93793640344 </li>
+                                <li><strong>Home Adress</strong>: Herat, 1st District, Bagh_e_Azadi </li>
+                                <li><strong> Filed of Study</strong>: Arts, Business Administration </li>
+                                <li><strong> Skill</strong>: Graphic Design Programs, Painting, Computer Skills </li>
+                                <li><strong> Brand Name</strong>: Artalia</li>
+                                <li><strong> Name Of Product</strong>: produced in your brand:Art/decoration tools and
+                                    panels, making logos and graphic designs</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -121,7 +126,10 @@
 
             </div>
         </section><!-- End Portfolio Details Section -->
+        <!-- section for infromation about students-->
+        <div>
 
+        </div>
     </main>
     <!-- End  section main -->
 
@@ -131,9 +139,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Masoumeh Rezai</p>
+                        <p class="copyright">Sahar Fajr</p>
                         <div class="credits">
-                            <a href="https://github.com/MahsumaRezai">My Github</a>
+                            <a href="sr.fajr@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
