--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>My protfilo</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <script src="./assets/js/search.js"></script>
 
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -15,7 +16,6 @@
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
   <link href="assets/css/style.css" rel="stylesheet">
 
 
@@ -90,46 +90,24 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/logo.PNG" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Masoumeh Rezai</span></p>
-                        <p><span class="title-s">Profile: </span> <span>frontend developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>mahsuma.rezai8@gmail.com </span></p>
+                        <p><span class="title-s">Name of Class: </span> <span class="center">BDS</span></p>
+                        <p><span class="title-s">Full Name Of Class: </span> <span>Business Development Services</span></p>
+
                       </div>
                     </div>
                   </div>
-                  <div class="skill-mf">
-                    <p class="title-s">Skill</p>
-                    <span>HTML</span> <span class="pull-right">100%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>CSS</span> <span class="pull-right">95%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95%" aria-valuemin="0"
-                        aria-valuemax="100"></div>
-                    </div>
-                    <span>SCSS</span> <span class="pull-right">100%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100%"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                        aria-valuemax="100"></div>
-                    </div>
-                  </div>
+
                 </div>
                 <div class="col-md-6">
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        About me
+                        About US
                       </h5>
                     </div>
                     <p class="lead">
@@ -156,10 +134,10 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Portfolio
+                List of Students
               </h3>
               <p class="subtitle-a">
-                My Projects
+                List of works
               </p>
               <div class="line-mf"></div>
             </div>
@@ -170,20 +148,21 @@
             <div class="work-box">
               <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/shop-three.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/Mahsomeh.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Shopping Site</h2>
+                    <h2 class="w-title">Name: Mahsoumeh Nawrozi</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">15 Feb. 2023</span>
+                      <span class="w-ctegory">Web Development, Web design and programming</span> / <span class="w-date">
+                        <a href="mahsuma.rezai8@gmail.com">mahsuma.rezai8@gmail.com</a></span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="Mahsoumeh.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -200,14 +179,15 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Twitch.com</h2>
+                    <h2 class="w-title"> Sahar Badakhsh</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">20 Sep. 2022</span>
+                      <span class="w-ctegory">Painting (oil color, acrylic, water color ,wood and clay carving)</span>
+                      / <span class="w-date"> saharbadaakhsh@gmail.com</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="ptoflio_twitch.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="SaharBadakhsh.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -224,14 +204,15 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Dribbble logIn Page</h2>
+                    <h2 class="w-title">Sahar Fajr</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Graphic Design Programs, Painting, Computer Skills</span> /
+                      <span class="w-date">sr.fajr@gmail.com</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="protfolio_dribble.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="SaharFajr.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -314,6 +295,22 @@
         </div>
       </div>
     </section><!-- End Portfolio Section -->
+
+
+
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+
+    <ul id="myUL">
+      <li><a href="#">Adele</a></li>
+      <li><a href="#">Agnes</a></li>
+
+      <li><a href="#">Billy</a></li>
+      <li><a href="#">Bob</a></li>
+
+      <li><a href="#">Calvin</a></li>
+      <li><a href="#">Christina</a></li>
+      <li><a href="#">Cindy</a></li>
+    </ul>
 
     <!--  Testimonials Section  -->
     <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
