--- a/mahsamahboobi.html
+++ b/mahsamahboobi.html
@@ -57,7 +57,7 @@
         <div class="hero-content display-table">
             <div class="table-cell">
                 <div class="container">
-                    <h2 class="hero-title mb-4"> My Portfolio</h2>
+                    <h2 class="hero-title mb-4">Information About Student</h2>
                     <ol class="breadcrumb d-flex justify-content-center">
                         <li class="breadcrumb-item">
                             <a href="#">information</a>
@@ -82,16 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/instagarm_hover.PNG" alt="">
+                                    <img src="assets/img/instagram.PNG" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/insatgarm_hover_two.PNG " alt="">
+                                    <img src="assets/img/twitch.PNG" alt="">
                                 </div>
 
-                                <div class="
-                    swiper-slide">
-                                    <img src="assets/img/instagarm_hover.PNG" alt="">
+                                <div class="swiper-slide">
+                                    <img src="assets/img/dribble.PNG" alt="">
                                 </div>
 
 
@@ -102,14 +101,18 @@
 
                     <div class="col-lg-4">
                         <div class="portfolio-info">
-                            <h3> Project information</h3>
+                            <h3> Student information</h3>
                             <ul>
-                                <li><strong>Project Name</strong>: instagram Login page </li>
-                                <li><strong> Github Link</strong>: <a href="https://github.com/MahsumaRezai/login_pages_collection">
-                                        https://github.com/MahsumaRezai</a></li>
-                                <li><strong>Project Demo </strong>: <a href="https://wondrous-stroopwafel-3ac9d0.netlify.app/">
-                                        https://wondrous-stroopwafel-3ac9d0.netlify.app/</a></li>
-
+                                <li><strong> Name</strong>: Mahsa mahboobi</li>
+                                <li><strong>Father Name</strong>:Mahboobshah </li>
+                                <li><strong>address:mahbano442@gmail.com</strong>: <a href="address:mahbano442@gmail.com">
+                                        mahsuma.rezai8@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: 0792609280 </li>
+                                <li><strong>Home Adress</strong>: District third </li>
+                                <li><strong> Filed of Study</strong>: Computer Science </li>
+                                <li><strong> Skill</strong>: Web Development, Web design and programming. </li>
+                                <li><strong> Brand Name</strong>: Coding is life</li>
+                                <li><strong> Name Of Product</strong>: Code College</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -121,7 +124,10 @@
 
             </div>
         </section><!-- End Portfolio Details Section -->
+        <!-- section for infromation about students-->
+        <div>
 
+        </div>
     </main>
     <!-- End  section main -->
 
