add all infromation

--- a/Fawzia.html
+++ b/Fawzia.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/faw.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/faw.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/faw.jpg" alt="" class="art">
                                 </div>
 
 
@@ -103,20 +103,25 @@
                         <div class="portfolio-info">
                             <h3> Student information</h3>
                             <ul>
-                                <li><strong> Name</strong>:Sahar Badakhsh </li>
-                                <li><strong>Father Name</strong>: Hafizullah
+                                <li><strong> Name</strong>:Fawzia Faizi</li>
+                                <li><strong>Father Name</strong>: Mullakhazan
                                 </li>
-                                <li><strong>Email Adress</strong>: <a href="saharbadaakhsh@gmail.com">
-                                        saharbadaakhsh@gmail.com</a></li>
-                                <li><strong>Phone Number</strong>: +93798423283 </li>
-                                <li><strong>Home Adress</strong>: Herat, 1st
-                                    District, Semetra street </li>
-                                <li><strong> Filed of Study</strong>: Art </li>
-                                <li><strong> Skill</strong>: Painting (oil color, acrylic, water color ,wood and clay
-                                    carving) </li>
-                                <li><strong> Brand Name</strong>: Artalia</li>
-                                <li><strong> Name Of Product</strong>: produced in your brand:Art/decoration tools and
-                                    panels, making logos and graphic designs</li>
+                                <li><strong>Email Adress</strong>: <a href="fawziafaizi768@gmail.com">
+                                        fawziafaizi768@gmail.com/a></li>
+                                <li><strong>Phone Number</strong>: 0790879758</li>
+                                <li><strong>Home Adress</strong>:Herat, the sixth district of Pol Rangina</li>
+                                <li><strong> Filed of Study</strong>: Graduated from Herat State University of
+                                    Administration and Public Policy
+                                    Midwifery student of the third semester of the kakashn sharq
+                                    Institute of Health Sciences. </li>
+                                <li><strong> Skill</strong>: computer, Pashto language, administrative and financial
+                                    management, leadership, letter writing, teaching various school subjects, CV
+                                    writing, application. Health departments (vaccination, injections, prescription
+                                    reading, suturing, nutrition, mental health, etc.) </li>
+                                <li><strong> Brand Name</strong>: Dexori Ganjineh Roshd</li>
+                                <li><strong> Name Of Product</strong>: decorating ornaments (making crowns and bridal
+                                    flowers and various beaded necklaces, and bracelets and flowers on the head, and
+                                    beading on clothes, and making bows and ...)</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -141,9 +146,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Sahar Badakhsh</p>
+                        <p class="copyright">Fawzia Faizi</p>
                         <div class="credits">
-                            <a href="saharbadaakhsh@gmail.com">My Email</a>
+                            <a href="fawziafaizi768@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
