--- a/Mahboobehhaidarian.html
+++ b/Mahboobehhaidarian.html
@@ -103,17 +103,15 @@
                         <div class="portfolio-info">
                             <h3> Student information</h3>
                             <ul>
-                                <li><strong> Name</strong>:Sahar Badakhsh </li>
-                                <li><strong>Father Name</strong>: Hafizullah
+                                <li><strong> Name</strong>:Mahboobeh Haidarian </li>
+                                <li><strong>Father Name</strong>: Abdul qader
                                 </li>
-                                <li><strong>Email Adress</strong>: <a href="saharbadaakhsh@gmail.com">
-                                        saharbadaakhsh@gmail.com</a></li>
-                                <li><strong>Phone Number</strong>: +93798423283 </li>
-                                <li><strong>Home Adress</strong>: Herat, 1st
-                                    District, Semetra street </li>
+                                <li><strong>Email Adress</strong>: <a href="mhhidarian@gmail.com ">
+                                        mhhidarian@gmail.com </a></li>
+                                <li><strong>Phone Number</strong>: 0794417963 </li>
+                                <li><strong>Home Adress</strong>: Herat, 8st District, Khawaja Saheb street </li>
                                 <li><strong> Filed of Study</strong>: Art </li>
-                                <li><strong> Skill</strong>: Painting (oil color, acrylic, water color ,wood and clay
-                                    carving) </li>
+                                <li><strong> Skill</strong>:Oil Painting, Acrylic, Watercolor and Computer Skills </li>
                                 <li><strong> Brand Name</strong>: Artalia</li>
                                 <li><strong> Name Of Product</strong>: produced in your brand:Art/decoration tools and
                                     panels, making logos and graphic designs</li>
@@ -141,9 +139,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Sahar Badakhsh</p>
+                        <p class="copyright">Mahboobeh Haidarian </p>
                         <div class="credits">
-                            <a href="saharbadaakhsh@gmail.com">My Email</a>
+                            <a href="mhhidarian@gmail.com ">My Email</a>
                         </div>
                     </div>
                 </div>
