--- a/mahsamahboobi.html
+++ b/mahsamahboobi.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/instagram.PNG" alt="">
+                                    <img src="assets/img/mahas.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/twitch.PNG" alt="">
+                                    <img src="assets/img/mahas.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/dribble.PNG" alt="">
+                                    <img src="assets/img/mahas.jpg" alt="" class="art">
                                 </div>
 
 
@@ -109,10 +109,9 @@
                                         mahsuma.rezai8@gmail.com</a></li>
                                 <li><strong>Phone Number</strong>: 0792609280 </li>
                                 <li><strong>Home Adress</strong>: District third </li>
-                                <li><strong> Filed of Study</strong>: Computer Science </li>
-                                <li><strong> Skill</strong>: Web Development, Web design and programming. </li>
-                                <li><strong> Brand Name</strong>: Coding is life</li>
-                                <li><strong> Name Of Product</strong>: Code College</li>
+                                <li><strong> Filed of Study</strong>: stomatology </li>
+                                <li><strong> Skill</strong>: resine artist </li>
+                                <li><strong> Name Of Product</strong>: resine</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -137,9 +136,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Masoumeh Rezai</p>
+                        <p class="copyright">Mahsa mahboobi</p>
                         <div class="credits">
-                            <a href="https://github.com/MahsumaRezai">My Github</a>
+                            <a href="mahbano442@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
