--- a/SaharFajr.html
+++ b/SaharFajr.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="">
+                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
                                 </div>
 
 
