--- a/Samira.html
+++ b/Samira.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/smari.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/smari.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/smari.jpg" alt="" class="art">
                                 </div>
 
 
@@ -103,20 +103,18 @@
                         <div class="portfolio-info">
                             <h3> Student information</h3>
                             <ul>
-                                <li><strong> Name</strong>:Sahar Badakhsh </li>
-                                <li><strong>Father Name</strong>: Hafizullah
+                                <li><strong> Name</strong>: Samira Karimi</li>
+                                <li><strong>Father Name</strong>: Muhammad
                                 </li>
-                                <li><strong>Email Adress</strong>: <a href="saharbadaakhsh@gmail.com">
-                                        saharbadaakhsh@gmail.com</a></li>
-                                <li><strong>Phone Number</strong>: +93798423283 </li>
-                                <li><strong>Home Adress</strong>: Herat, 1st
-                                    District, Semetra street </li>
-                                <li><strong> Filed of Study</strong>: Art </li>
-                                <li><strong> Skill</strong>: Painting (oil color, acrylic, water color ,wood and clay
-                                    carving) </li>
-                                <li><strong> Brand Name</strong>: Artalia</li>
-                                <li><strong> Name Of Product</strong>: produced in your brand:Art/decoration tools and
-                                    panels, making logos and graphic designs</li>
+                                <li><strong>Email Adress</strong>: <a href="001@gmail.com">
+                                        001@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: 0796177381 </li>
+                                <li><strong>Home Adress</strong> Ghand 11 , Herat-Afghanistan </li>
+                                <li><strong> Filed of Study</strong>:Graduated From Midwifery</li>
+                                <li><strong> Skill</strong>:Making hand Embroidery, Weaving, Sewing, Knitting, and
+                                    Sports ( Taekwondo) </li>
+                                <li><strong> Brand Name</strong>: Samia Art</li>
+                                <li><strong> Name Of Product</strong>: Accessory</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -141,9 +139,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Sahar Badakhsh</p>
+                        <p class="copyright">Samira Karimi</p>
                         <div class="credits">
-                            <a href="saharbadaakhsh@gmail.com">My Email</a>
+                            <a href="001@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
