--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="work-box">
               <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/twitch.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/saherb.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -198,7 +198,7 @@
             <div class="work-box">
               <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/dribble.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/shaer fjaer.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -229,14 +229,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">NETFLIX.com</h2>
+                    <h2 class="w-title">Mahsa mahboobi</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">3.Feb 2023</span>
+                      <span class="w-ctegory">esine artist</span> / <span class="w-date">mahbano442@gmail.com</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="protfilo_netfilx.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="mahsamahboobi.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -247,20 +247,21 @@
             <div class="work-box">
               <a href="" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/instagram_main.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/jmail.pdf" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Instagram logIn Page</h2>
+                    <h2 class="w-title">Jamilah Amiri</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">20 Sep. 2022</span>
+                      <span class="w-ctegory">English literature </span> / <span class="w-date">jamilahamiri@gmail.com
+                      </span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="protfilo_hasnode.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="JamilahAmiri.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -271,26 +272,236 @@
             <div class="work-box">
               <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/adventure.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/Maboba.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Adventure</h2>
+                    <h2 class="w-title">Mahboobeh Haidarian </h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">15 Feb. 2023</span>
+                      <span class="w-ctegory">Oil Painting, Acrylic, Watercolor and Computer Skills</span>
+                      / <span class="w-date">mhhidarian@gmail.com </span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="protfilo_adventure.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="Mahboobehhaidarian.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/Najmeh.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Najmah Mohammad yar</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"> English language, laboratory, Emergency ward, teaching </span> / <span
+                        class="w-date">mortezamohammadyar841@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Najmah.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!---->
+
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/symeh.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">somaya afghan</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"> pachto language and midvifre
+                      </span> / <span class="w-date">somayaafghan7@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="somayaafghan.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/maryem.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Maryam Nazari</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"> computer and business
+                      </span> / <span class="w-date">nazarymaryam108@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="mayam.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/fawzai.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Fawzia Faizi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"> Graduated from Herat State University of Administration and Public
+                        Policy
+                      </span> / <span class="w-date">fawziafaizi768@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Fawzia.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/Kauel.JPG" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Gulalia Meskinyar</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"> School Graduate
+                        Policy
+                      </span> / <span class="w-date">ulalymeskinyar@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Gulalia.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/smi.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Samira Karimi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"> Graduated From Midwifery
+                        Policy
+                      </span> / <span class="w-date"> 001@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Samira.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/soneta.JPG" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Sonita karimi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Faculty Of Law
+                      </span> / <span class="w-date"> sam980483@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Sonita.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
 
         </div>
       </div>
@@ -312,163 +523,26 @@
       <li><a href="#">Cindy</a></li>
     </ul>
 
-    <!--  Testimonials Section  -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
-      <div class="overlay-mf"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
 
-            <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-              <div class="swiper-wrapper">
-
-                <div class="swiper-slide">
-                  <div class="testimonial-box">
-                    <div class="author-test">
-                      <img src="assets/img/profile.jpg" alt="" class="rounded-circle b-shadow-a" id="myimg">
-                      <span class="author">Masoumeh Rezai</span>
-                    </div>
-                    <div class="content-test">
-
-                    </div>
-                  </div>
-                </div><!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-box">
-                    <div class="author-test">
-                      <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                    </div>
-                    <div class="content-test">
-                      <p class="description lead">
-                        Hello, my name is Masoumeh Rezai. I live in Herat, Afghanistan. I have been learning front-end<br>
-                        programming for a year. During this time, I have worked on many projects in this sector<br> and
-                        every
-                        day I try to increase my abilities in this sector
-                      </p>
-                    </div>
-                  </div>
-                </div><!-- End testimonial item -->
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-
-
-          </div> -->
-        </div>
-      </div>
-    </div>
-    </div><!-- End Testimonials Section -->
-
-
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
-      <div class="overlay-mf"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="contact-mf">
-              <div id="contact" class="box-shadow-full">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="title-box-2">
-                      <h5 class="title-left">
-                        Send Message
-                      </h5>
-                    </div>
-                    <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                        <div class="row">
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                                required>
-                            </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                                required>
-                            </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                                required>
-                            </div>
-                          </div>
-                          <div class="col-md-12">
-                            <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                            </div>
-                          </div>
-                          <div class="col-md-12 text-center my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                          </div>
-                          <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="title-box-2 pt-4 pt-md-0">
-                      <h5 class="title-left">
-                        Get in Touch
-                      </h5>
-                    </div>
-                    <div class="more-info">
-                      <p class="lead">
-                        If you want to follow me, you can follow me from the following networks
-                      </p>
-                      <ul class="list-ico">
-                        <li><span class="bi bi-phone"></span> @MahsumaRezai in Twitter.com</li>
-                        <li><span class="bi bi-envelope"></span> mahsuma.rezai8@gmail.com</li>
-                      </ul>
-                    </div>
-                    <div class="socials">
-                      <ul>
-                        <li><a href="https://twitter.com/MahsumaRezai?t=-4sgoEW4xxsSVFbECe5fqw&s=09"><span class="ico-circle"><i
-                                class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="https://twitter.com/MahsumaRezai?t=-4sgoEW4xxsSVFbECe5fqw&s=09"><span class="ico-circle"><i
-                                class="bi bi-linkedin"></i></span></a></li>
-                        <li><a href="https://github.com/MahsumaRezai"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
+
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">Masoumeh Rezai</p>
+            <p class="copyright">Y.H.D.O</p>
             <div class="credits">
-
-              <a href="https://github.com/MahsumaRezai">My GitHub</a>
+              <a href="">BDS Students</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </footer>
-  <!-- End  Footer -->
-
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
