--- a/mayam.html
+++ b/mayam.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/popp.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/popp.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/popp.jpg" alt="" class="art">
                                 </div>
 
 
@@ -103,20 +103,19 @@
                         <div class="portfolio-info">
                             <h3> Student information</h3>
                             <ul>
-                                <li><strong> Name</strong>:Sahar Badakhsh </li>
-                                <li><strong>Father Name</strong>: Hafizullah
+                                <li><strong> Name</strong>: Maryam Nazari</li>
+                                <li><strong>Father Name</strong>: Abdul Qudous
                                 </li>
-                                <li><strong>Email Adress</strong>: <a href="saharbadaakhsh@gmail.com">
-                                        saharbadaakhsh@gmail.com</a></li>
-                                <li><strong>Phone Number</strong>: +93798423283 </li>
-                                <li><strong>Home Adress</strong>: Herat, 1st
-                                    District, Semetra street </li>
-                                <li><strong> Filed of Study</strong>: Art </li>
-                                <li><strong> Skill</strong>: Painting (oil color, acrylic, water color ,wood and clay
-                                    carving) </li>
-                                <li><strong> Brand Name</strong>: Artalia</li>
-                                <li><strong> Name Of Product</strong>: produced in your brand:Art/decoration tools and
-                                    panels, making logos and graphic designs</li>
+                                <li><strong>Email Adress</strong>: <a href="nazarymaryam108@gmail.com">
+                                        nazarymaryam108@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: 0799196558 </li>
+                                <li><strong>Home Adress</strong>:Herat - first district - Bagh Azadi - Sark Si Meter -
+                                    Navai 10 - House 14 </li>
+                                <li><strong> Filed of Study</strong>: Economics</li>
+                                <li><strong> Skill</strong>: computer and business </li>
+                                <li><strong> Brand Name</strong>: Papco</li>
+                                <li><strong> Name Of Product</strong>: Popcorn with different flavors (caramel, cocoa,
+                                    cheesy; Korean, fruit, etc.)</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -141,9 +140,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Sahar Badakhsh</p>
+                        <p class="copyright">Maryam Nazari</p>
                         <div class="credits">
-                            <a href="saharbadaakhsh@gmail.com">My Email</a>
+                            <a href="nazarymaryam108@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
