ada all student

--- a/Shaheera.html
+++ b/Shaheera.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/mehtoba.jpg" alt="" class="art">
+                                    <img src="assets/img/shaerr.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/mehtoba.jpg" alt="" class="art">
+                                    <img src="assets/img/shaerr.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/mehtoba.jpg" alt="" class="art">
+                                    <img src="assets/img/shaerr.jpg" alt="" class="art">
                                 </div>
 
 
@@ -103,20 +103,18 @@
                         <div class="portfolio-info">
                             <h3> Student information</h3>
                             <ul>
-                                <li><strong> Name</strong>: Mahtab Nazari</li>
-                                <li><strong>Father Name</strong>: Abdul Qudous
+                                <li><strong> Name</strong>: Shaheera Rashidi</li>
+                                <li><strong>Father Name</strong>: Bashir Ahmad
                                 </li>
-                                <li><strong>Email Adress</strong>: <a href="nazarmahtab22@gmail.com">
-                                        nazarmahtab22@gmail.com</a></li>
-                                <li><strong>Phone Number</strong>: 0799268652 </li>
-                                <li><strong>Home Adress</strong>:Herat - first district - Bagh Azadi - Sark Si Meter -
-                                    Navai 10 - House 14 </li>
-                                <li><strong> Filed of Study</strong>: Dep-Of Food Technology,Faculty of Agriculture</li>
-                                <li><strong> Skill</strong>: Expertise in sectors, Saffron Processing, Pickling and jam
-                                    making, confectionery, Fruit juice making and Computer Skills </li>
-                                <li><strong> Brand Name</strong>: Candy Fruit Paste</li>
-                                <li><strong> Name Of Product</strong>:Carrot Pastille, Watermelon Skin Pastille, apple,
-                                    orange, chaharmagz, sesame..</li>
+                                <li><strong>Email Adress</strong>: <a href="rashidi2023@gmail.com">
+                                        rashidi2023@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: 0780878710 </li>
+                                <li><strong>Home Adress</strong> Herat, Farqa-Nawabad </li>
+                                <li><strong> Filed of Study</strong>:Economics</li>
+                                <li><strong> Skill</strong>:Production and retail sale of Saffron, Signed About 10
+                                    Farming Contracts </li>
+                                <li><strong> Brand Name</strong>: Center of Saffron production and women empowerment</li>
+                                <li><strong> Name Of Product</strong>: Saffron</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -141,9 +139,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Mahtab Nazari</p>
+                        <p class="copyright">Shaheera Rashidi</p>
                         <div class="credits">
-                            <a href="nazarmahtab22@gmail.com">My Email</a>
+                            <a href=" Bashir Ahmad">My Email</a>
                         </div>
                     </div>
                 </div>
