--- a/index.html
+++ b/index.html
@@ -502,6 +502,96 @@
             </div>
           </div>
           <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/mehtob.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Mahtab Nazari</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Dep-Of Food Technology,Faculty of Agriculture
+                      </span> / <span class="w-date"> nazarmahtab22@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Mahtab.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/shaeeer.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Shaheera Rashidi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Economics
+                      </span> / <span class="w-date"> rashidi2023@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Shaheera.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/fatem.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Fatemeh Ahmadi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Literature University of Pashto Department
+                      </span> / <span class="w-date"> fatemahahmady1234@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Fatemeh.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
 
         </div>
       </div>
